--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "" "sbotools 3.8"
+.TH SBO::Lib::Info 3 "Pungenday, Bureaucracy 9, 3191 YOLD" "" "sbotools 3.8"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -90,6 +90,15 @@ SBO::Lib::Info \- Utilities to get data from SBo info files.
 .PP
 \&\f(CWcheck_x64()\fR returns a true value if the SlackBuild in \f(CW$location\fR considers
 32\-bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR and false otherwise.
+.SS fix_info
+.IX Subsection "fix_info"
+.Vb 1
+\&  my $fixed_string = fix_info($info_string);
+.Ve
+.PP
+\&\f(CWfix_info()\fR sanitizes the contents of info files, and should be run once when a
+\&\f(CWparse_info()\fR call fails. It attempts to repair trailing whitespace, blank lines,
+garbage lines and missing quotation marks and backslashes.
 .SS get_download_info
 .IX Subsection "get_download_info"
 .Vb 2
@@ -168,8 +177,9 @@ be a list of all installed scripts.
 .Ve
 .PP
 \&\f(CWparse_info()\fR parses the contents of an info file from \f(CW$str\fR and returns
-a key\-value list of all values present. It attempts to repair trailing whitespace,
-blank lines, garbage lines and missing quotation marks and backslashes.
+a key\-value list of all values present.
+.PP
+In case of failure, use \f(CWfix_info()\fR on the offending file and try again.
 .SH "EXIT CODES"
 .IX Header "EXIT CODES"
 Info.pm subroutines can return the following exit codes:
