--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, Bureaucracy 10, 3191 YOLD" "" "sbotools 3.8"
+.TH SBO::Lib::Util 3 "Boomtime, Bureaucracy 18, 3191 YOLD" "" "sbotools 3.8"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -150,7 +150,8 @@ automatic reverse dependency rebuilds read in from \f(CW\*(C`/etc/sbotools/sboto
 .ie n .SS "(@on_blacklist, @auto_reverse, %optional)"
 .el .SS "(@on_blacklist, \f(CW@auto_reverse\fP, \f(CW%optional\fP)"
 .IX Subsection "(@on_blacklist, @auto_reverse, %optional)"
-These are populated by \f(CWread_hints()\fR and used to determine hint status.
+These exported variables are populated by \f(CWread_hints()\fR and used to determine hint
+status.
 .ie n .SS $obs_file
 .el .SS \f(CW$obs_file\fP
 .IX Subsection "$obs_file"
