--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -1,4 +1,4 @@
-.TH sboclean 1 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "sbotools 3.8" sbotools
+.TH sboclean 1 "Setting Orange, Bureaucracy 21, 3191 YOLD" "sbotools 3.8.1" sbotools
 .SH NAME
 .P
 .B
