--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "sbotools 3.8" sbotools
+.TH sbotools.conf 5 "Setting Orange, Bureaucracy 21, 3191 YOLD" "sbotools 3.8.1" sbotools
 .SH NAME
 .P
 .B
