sbofind, sboremove: Show the short description if available.

--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -20,8 +20,8 @@ sbofind [--color|--nocolor] ...
 sbofind
 searches the names of all available SlackBuilds for one or more
 search terms. It reports back any SlackBuilds found along
-with path, version and installation status information. This is
-akin to running
+with path, version, installation status information and a short
+description. This is akin to running
 .RS
 
 cd /usr/ports; make search name=$search_term display=name,path
