--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -15,7 +15,7 @@ sbocheck [-COXgn]
 .P
 sbocheck [-c] package [package]
 .P
-sbocheck [--color|--nocolor] ...
+sbocheck [--color|--nocolor] [--wrap|--nowrap] ...
 .SH DESCRIPTION
 .P
 .B
@@ -366,6 +366,24 @@ Turn off
 .B
 sbotools
 color output.
+.RE
+.P
+.B
+--wrap
+.RS
+Turn on
+.B
+sbotools
+word wrapping (default).
+.RE
+.P
+.B
+--nowrap
+.RS
+Turn off
+.B
+sbotools
+word wrapping.
 .RE
 .SH EXIT CODES
 .P
