--- a/slackbuild/sbotools/README
+++ b/slackbuild/sbotools/README
@@ -7,7 +7,12 @@ multilib systems, reverse dependency search and rebuild, dry run and
 batch modes, gpg verification, optional build logging, checks for
 missing shared object dependencies, and more.
 
-Each included command has a man page. See sbotools(1) for executive
+Most sbotools operations can be accomplished using sbotool, a meta-
+tool providing a dialog-based frontend with dynamic menus. Running
+the tools individually from the command line provides superior
+option control and efficiency, however.
+
+Each included tool has a man page. See sbotools(1) for executive
 summaries and a startup guide. The modules are documented in man 3.
 
 Configuration files from version 2.7 are compatible, but some of the
