Setting DIALOGRC and sbotool man page.

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -90,6 +90,21 @@ TRUE\fR\
 .RE
 .P
 .B
+DIALOGRC=(FALSE|/path)
+.RS
+If set to an
+.B
+absolute path\fR\
+\&, use that file as
+.I
+dialogrc
+when running
+.B
+sbotool(1)\fR\
+\&.
+.RE
+.P
+.B
 DISTCLEAN=(FALSE|TRUE)
 .RS
 If
@@ -442,7 +457,7 @@ sbotools
 output.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.hints(5), gpg(1)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotool(1), sbotools.colors(5), sbotools.hints(5), dialog(1), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
