--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -15,7 +15,7 @@ sboconfig [-l|-n]
 .P
 sboconfig [--reset]
 .P
-sboconfig [-CKOPRSXcbdegw TRUE|FALSE] [-j #|FALSE] [-Lpo /path|FALSE] \\
+sboconfig [-CKOPRSXcbdegw TRUE|FALSE] [-j #|FALSE] [-DLpo /path|FALSE] \\
           [-s /path|/usr/sbo] [-B branch_name|FALSE] [-V #.#|FALSE] \\
           [-r url|FALSE]
 .SH DESCRIPTION
@@ -205,6 +205,22 @@ directories under
 .I
 $TMP\fR\
 \&).
+.RE
+.P
+.B
+-D|--dialogrc (FALSE|/path)
+.RS
+DIALOGRC\fR\
+\&: If set to an
+.B
+absolute path\fR\
+\&, use that file as
+.I
+dialogrc
+when running
+.B
+sbotool(1)\fR\
+\&.
 .RE
 .P
 .B
@@ -651,7 +667,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1)
+sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotool(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), dialog(1) gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
