sbotool: View and edit build options.

--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -60,11 +60,13 @@ is chosen,
 .B
 sbotool
 displays a dry run on the final confirmation screen. To specify build options
-for a particular script, install interactively or write the options to a file
-at
+for a particular script, install interactively or use
+.B
+Add Build Options
+from the script menu screen ahead of time as root. Build options are saved in the
 .I
-/var/log/sbotools/script_name
-ahead of time.
+/var/log/sbotools
+directory for future use.
 .P
 If packages (especially those marked
 .I
