--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -902,7 +902,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotool(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
