--- a/man5/sbotools.colors.5
+++ b/man5/sbotools.colors.5
@@ -93,7 +93,7 @@ SBOTOOLS_CONF_DIR
 with an absolute path.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), Term::ANSIColor(3)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotool(1), sbotool(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), Term::ANSIColor(3)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
