Tweak README.md and sbotools.1.

--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -81,11 +81,11 @@ Upgrade previously-installed SlackBuilds.
 .RE
 .P
 .B
-sbotool
-is a meta-tool providing a frontend based on
+sbotool(1)
+is a meta-tool providing a TUI based on
 .B
 dialog(1)\fR\
-\&. Many
+\&. Most
 .B
 sbotools
 operations can be accomplished through this series of dynamic menus, though calling
