sbotool.1: Reflect new option names.

--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -36,10 +36,10 @@ Package Search
 and choose from the list of options in the menu. Installed, upgradable
 and override scripts can be reached from
 .B
-Installed SBo Packages\fR\
+Installed\fR\
 \&,
 .B
-Upgradable SBo Packages
+Upgradable
 and
 .B
 Overrides\fR\
@@ -66,7 +66,7 @@ sbotool
 displays a dry run on the final confirmation screen. To specify build options
 for a particular script, install interactively or use
 .B
-Add Build Options
+Build Options
 from the script menu screen ahead of time as root. Build options are saved in the
 .I
 /var/log/sbotools
